# hledger-document-check

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  build.rs
.github/workflows/: ci.yml
example/: README.md  accounts.journal  journal.journal  rebuild-fava-inputs.sh
example/documents/: hledger-document-check.toml
example/documents/Expenses/Business/Cloud/: 2026-01-04-cloud.document.yml
example/documents/Expenses/Business/Currency-mismatch/: 2026-05-06-usd-invoice.document.yml
example/documents/Expenses/Business/Domains/: 2026-03-01-domain-a.document.yml  2026-03-01-domain-b.document.yml
example/documents/Expenses/Business/Missing-transaction-amount/: 2026-05-04-missing-amount.document.yml
example/documents/Expenses/Business/Mixed-transaction-currencies/: 2026-05-05-mixed.document.yml
example/documents/Expenses/Business/Software/: 2026-04-01-suite.document.yml
scripts/: capture-fava-documents-screenshot.sh
specs/: 00-configuration.md  01-contract.md  02-directory-and-file-layout.md  03-document-metadata.md  04-amount-audit.md  05-unbooked-invoices.md  06-due-date.md  07-enrich-journal.md  08-full-example.md  README.md
src/: account_audit.rs  amount_audit.rs  amounts.rs  check_documents.rs  comparison.rs  config.rs  cover_audit.rs  document_paths.rs  document_tree.rs  duplicates.rs  enrich_journal.rs  journal.rs  main.rs  matching.rs  metadata.rs  model.rs  redundancy.rs
tests/: cucumber.rs
tests/examples/pdf_text/: german_rechnungsbetrag.txt  subtotal_and_total.txt
tests/fixtures/pdf_text/: english_document_total.txt
(+10 files in other folders)
