[package]
name = "hledger-document-check"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hledger-document-check"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fancy-regex = "0.14"
pdf-extract = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
cucumber = { version = "0.21", features = ["macros"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }

[[test]]
name = "cucumber"
harness = false
