[package]
name = "hledger-document-check"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hledger-document-check"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
fancy-regex = "0.18"
pdf-extract = "0.12"
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
toml = "1.1.3"
walkdir = "2.5.0"

[dev-dependencies]
cucumber = { version = "0.23", features = ["macros"] }
tempfile = "3.27.0"
tokio = { version = "1.53.0", features = ["macros", "process", "rt-multi-thread", "time"] }

[build-dependencies]
markdown-to-cucumber = { git = "https://github.com/roschaefer/markdown-to-cucumber.git", branch = "main" }

[[test]]
name = "cucumber"
harness = false
